[gd_scene load_steps=4 format=3 uid="uid://d14papl6dxsqu"]

[ext_resource type="Script" path="res://HUDs/Selection.gd" id="1_cue40"]
[ext_resource type="Texture2D" uid="uid://dejxum604wg2s" path="res://Resources/2D Pixel Dungeon Asset Pack/items and trap_animation/flasks/flasks_1_1.png" id="2_dvfnu"]
[ext_resource type="Theme" uid="uid://bngt8jkm3fvb1" path="res://Resources/hud_elements/default.theme" id="2_lgskx"]

[node name="Selection" type="CanvasLayer"]
script = ExtResource("1_cue40")

[node name="CanvasModulate" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
theme = ExtResource("2_lgskx")

[node name="Slot1" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Slot1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Slot1/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_dvfnu")
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/Slot1/VBoxContainer"]
custom_minimum_size = Vector2(222, 23)
layout_mode = 2
text = "text"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Slot1Button" type="Button" parent="HBoxContainer/Slot1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="Slot2" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Slot2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Slot2/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_dvfnu")
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/Slot2/VBoxContainer"]
custom_minimum_size = Vector2(222, 23)
layout_mode = 2
text = "text"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Slot2Button" type="Button" parent="HBoxContainer/Slot2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="Slot3" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Slot3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Slot3/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_dvfnu")
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/Slot3/VBoxContainer"]
custom_minimum_size = Vector2(222, 23)
layout_mode = 2
text = "text"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Slot3Button" type="Button" parent="HBoxContainer/Slot3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="SkipTooltip" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.95
anchor_right = 0.5
anchor_bottom = 0.95
offset_left = -65.0
offset_top = -23.0
offset_right = 65.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_lgskx")
text = "Press ESC to skip"

[connection signal="pressed" from="HBoxContainer/Slot1/Slot1Button" to="." method="_on_slot_1_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Slot2/Slot2Button" to="." method="_on_slot_2_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Slot3/Slot3Button" to="." method="_on_slot_3_button_pressed"]
